# bubblifier-bot

./: .editorconfig  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  LICENSE.md  README.md  docker-compose.yml  package.json  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml  lint.yml
api/: .gitignore  Cargo.toml  Dockerfile  rustfmt.toml
api/config/: default.toml
api/migrations/2021-02-18-175138_initial/: down.sql  up.sql
api/src/: bubble.rs  main.rs  message.rs  models.rs  schema.rs  settings.rs  utils.rs
client/: .eslintignore  .eslintrc.json  package-lock.json  package.json
client/src/: components.html  index.css  message.ts
client/src/App/: index.tsx
client/src/App/Droplets/: index.tsx
client/src/App/Message/: index.tsx
client/src/App/Messages/: index.css  index.tsx
client/src/App/Section/: index.css  index.tsx
prisma/: schema.prisma
proto/: message.proto
selenoid/: browsers.json
src/: components.ts  index.css  index.ts
