[package]
name = "bubblifier-bot"
version = "0.0.1"
edition = "2018"
description = "Telegram Bubblifier Bot"
homepage = "https://github.com/pool-party/bubblifier-bot"
repository = "https://github.com/pool-party/bubblifier-bot"
documentation = "https://github.com/pool-party/bubblifier-bot#readme"
readme = "../README.md"
keywords = ["telegram"]
license-file = "../LICENSE.md"
authors = ["Pool Party Corp"]

[dependencies]
# telegram
teloxide = { version = "0.4.0", features = ["macros"] }
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = "0.1.5"
bytes = "1.0.1"

# database
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.15.0"

# other
anyhow = "1.0"

log = "0.4"
pretty_env_logger = "0.4"

config = "0.11.0"
serde = { version = "1.0.125", features = ["derive"] }

image = "0.23.14"
thirtyfour = "0.23.0"
